Added Order Model

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -110,3 +110,17 @@
   height: 0px;
   background-color: none; /* Example for active color */
 }
+
+input[type='number'] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
