--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -188,4 +190,12 @@
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-weight: 900;
   font-style: italic;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html{
+  overflow-y: hidden;
 }
